# Nasdaq_model

./: .gitignore  CHANGELOG.md  CLAUDE.md  pyproject.toml
.claude/: mcp.json  settings.local.json
.claude/commands/: iteration-loop.md
.claude/skills/: iteration-loop.md
config/: secrets.yaml.template  settings.yaml
research/: experiment_log.md
src/backtest/: __init__.py  engine.py  metrics.py
src/data/: __init__.py  alpha_vantage.py  cache.py  config_loader.py  earnings_calendar.py  fetcher.py  fred.py  pipeline.py  polygon.py  price.py  synthetic.py
src/events/: __init__.py  base.py  earnings.py
src/factors/: __init__.py  base.py  event_factors.py
src/models/: __init__.py  base.py  event_study.py  regression.py
src/utils/: __init__.py  experiment_logger.py  logging_config.py  seed.py  timezone.py  validation.py
tests/: diagnostic_signal.py  end_to_end_test.py  real_data_test.py  test_backtest.py  test_backtest_fix.py  test_iteration5.py  test_iteration6.py
